# SudokuSolver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Datasets/DatasetCreation/: main.py
compilation/: rebuild.sh  run.sh
datasets/datasetCreation/: main.py
datasets/digits/: 2024-1-31_20-12-45.digits  2024-1-31_20-12-46.digits  2024-1-31_20-12-47.digits  2024-1-31_20-12-49.digits  2024-1-31_20-12-50.digits  2024-1-31_20-12-51.digits  2024-1-31_20-12-53.digits  2024-1-31_20-12-54.digits  2024-1-31_20-12-55.digits  2024-1-31_20-12-56.digits  2024-1-31_20-12-57.digits  2024-1-31_20-12-59.digits  2024-1-31_20-13-0.digits  2024-1-31_20-13-1.digits  2024-1-31_20-13-10.digits  2024-1-31_20-13-12.digits  2024-1-31_20-13-13.digits  2024-1-31_20-13-15.digits  2024-1-31_20-13-16.digits  2024-1-31_20-13-17.digits  2024-1-31_20-13-18.digits  2024-1-31_20-13-2.digits  2024-1-31_20-13-20.digits  2024-1-31_20-13-3.digits  2024-1-31_20-13-4.digits  2024-1-31_20-13-6.digits  2024-1-31_20-13-7.digits  2024-1-31_20-13-9.digits
include/: Sudoku.h  TestSudoku.h
include/UI/: App.h  DrawDigit.h  selection_ui.h  solver_ui.h
include/deepLearning/: Activation.h  Adam.h  Allocator.h  Barrier.h  Dataset.h  LayerShape.h  Loss.h  Network.h  NetworkTest.h  RandomInit.h
include/geometry/: Line.h  Point.h  Square.h  Vector.h
include/imageProcessing/: AddDigit.h  Adjust.h  Binarisation.h  Canny.h  DigitProcess.h  Grayscale.h  Hough.h  Image.h  ImageProcessing.h  ImageTransformation.h  (+7 more)
src/: Downscale.c  Downscale.h  Sudoku.c  Test.c  TestSudoku.c  Tools.c  Tools.h  main.c
(+166 files in other folders)
